--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>Overflow</h1>
-					<p>By HTML5 UP</p>
+					<h1>Protego</h1>
+					<p>SecOps</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
@@ -28,7 +28,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>Security Operations and Pentesting</h2>
 				</header>
 				<p>A brand new site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
 				It’s responsive, built on HTML5/CSS3, and entirely free<br />
