--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Overflow by HTML5 UP</title>
+		<title>Protego.dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<p>SecOps</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
+					<a href="#banner" class="button style2 scrolly-middle">Proceed to Services</a>
 				</footer>
 			</section>
 
@@ -30,9 +30,9 @@
 				<header>
 					<h2>Security Operations and Pentesting</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
-				It’s responsive, built on HTML5/CSS3, and entirely free<br />
-				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<p>Probing, testing, isolating weakness in your infrastructure and public facing technologies.<br />
+				Red Team, Blue Team, stratigies with invasive and non invasive testing<br />
+				Consultations available on request.</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
 				</footer>
