--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 				<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Lorem ipsum<br />
-						dolor sit amet</h2>
+						<h2>Red Team<br />
+						Blue Team</h2>
 					</header>
-					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+					<p>Attackers and Defenders stratigies to keep your infrasturucture safe and secure. Giving you the insight on how your environment could be compromised. </p>
 				</div>
 			</article>
 
