--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<p>SecOps</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Proceed to Services</a>
+					<a href="#banner" class="button style2 scrolly-middle">What We Do</a>
 				</footer>
 			</section>
 
