--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; 2019. All rights reserved. protego.dev©</li>
 				</ul>
 			</div>
 		</section>
