--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Red Team<br />
+						<h2>Red Team,<br />
 						Blue Team</h2>
 					</header>
 					<p>Attackers and Defenders stratigies to keep your infrasturucture safe and secure. Giving you the insight on how your environment could be compromised. </p>
@@ -55,10 +55,10 @@
 				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Mollis posuere<br />
-						lectus lacus</h2>
+						<h2>Remote and Physical<br />
+						Penetration Testing</h2>
 					</header>
-					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+					<p>Internal and External testing of your environment for potential weekness and points of breach. Indepth ananlysis and consultation giving you the insight into your home or business.</p>
 				</div>
 			</article>
 
