--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Protego/h1>
+								<h1>Protego</h1>
 								<p>Security Operations and Pentesting<br /></p>
 							</div>
 						</div>
