--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>protego.dev/title>
+		<title>protego.dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,12 +20,13 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-code"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Protego</h1>
-								<p>Security Operations and Pentesting<br /></p>
+								<p>Security Operations and Pentesting<br />
+								</p>
 							</div>
 						</div>
 						<nav>
