--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#intro">Pentesting</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -45,10 +45,10 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Pentesting</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Probing, testing, isolating weakness in your infrastructure and public facing technologies </br>
-									Red Team, Blue Team, stratigies with invasive and non invasive testing,Consultations available on request.</p>
+								<p>Don’t confuse penetration testing with simply vulnerability scanning or security assessments – it’s those things plus more.  Pentesting helps find some of the most complicated attack vectors across systems, finding vulnerabilities that tools and techniques used during development are unable to detect, as they are testing single systems, not yet embedded in the organization’s wider network. Pentesting is also often used after an intrusion to detect the vectors used by the attackers to recreate the attack and prevent it from happening again.</br>
+									Pentesting is a major component of many kinds of security audits, including the PCI-DSS regulation, which requires annual pentests on active systems that handle or hold payment information. Pentesters will use a mix of manual and automated testing, using a vast array of tools, </p>
 							</article>
 
 						<!-- Work -->
