--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
 								<h2 class="major">Pentesting</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Don’t confuse penetration testing with simply vulnerability scanning or security assessments – it’s those things plus more.  Pentesting helps find some of the most complicated attack vectors across systems, finding vulnerabilities that tools and techniques used during development are unable to detect, as they are testing single systems, not yet embedded in the organization’s wider network. Pentesting is also often used after an intrusion to detect the vectors used by the attackers to recreate the attack and prevent it from happening again.</br>
-									Pentesting is a major component of many kinds of security audits, including the PCI-DSS regulation, which requires annual pentests on active systems that handle or hold payment information. Pentesters will use a mix of manual and automated testing, using a vast array of tools, </p>
+								</br>
+									Pentesting is a major component of many kinds of security audits, including the PCI-DSS regulation, which requires annual pentests on active systems that handle or hold payment information. Pentesters will use a mix of manual and automated testing, using a vast array of tools.</br>
+							</br>
+									The main objective of penetration testing is to identify security weaknesses. Penetration testing can also be used to test an organization's security policy, its adherence to compliance requirements, its employees' security awareness and the organization's ability to identify and respond to security incidents.</br>
+						</br>
+									Typically, the information about security weaknesses that are identified or exploited through pen testing is aggregated and provided to the organization's IT and network system managers, enabling them to make strategic decisions and prioritize remediation efforts.</br>
+					</br>
+									Penetration tests are also sometimes called white hat attacks because in a pen test, the good guys are attempting to break in.</p>
 							</article>
 
 						<!-- Work -->
