--- a/index.html
+++ b/index.html
@@ -48,22 +48,19 @@
 								<h2 class="major">Pentesting</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Don’t confuse penetration testing with simply vulnerability scanning or security assessments – it’s those things plus more.  Pentesting helps find some of the most complicated attack vectors across systems, finding vulnerabilities that tools and techniques used during development are unable to detect, as they are testing single systems, not yet embedded in the organization’s wider network. Pentesting is also often used after an intrusion to detect the vectors used by the attackers to recreate the attack and prevent it from happening again.</br>
-								</br>
-									Pentesting is a major component of many kinds of security audits, including the PCI-DSS regulation, which requires annual pentests on active systems that handle or hold payment information. Pentesters will use a mix of manual and automated testing, using a vast array of tools.</br>
-							</br>
-									The main objective of penetration testing is to identify security weaknesses. Penetration testing can also be used to test an organization's security policy, its adherence to compliance requirements, its employees' security awareness and the organization's ability to identify and respond to security incidents.</br>
-						</br>
-									Typically, the information about security weaknesses that are identified or exploited through pen testing is aggregated and provided to the organization's IT and network system managers, enabling them to make strategic decisions and prioritize remediation efforts.</br>
-					</br>
-									Penetration tests are also sometimes called white hat attacks because in a pen test, the good guys are attempting to break in.</p>
+								<p>Pentesting is a major component of many kinds of security audits, including the PCI-DSS regulation, which requires annual pentests on active systems that handle or hold payment information. Pentesters will use a mix of manual and automated testing, using a vast array of tools.</p>
+								<p>The main objective of penetration testing is to identify security weaknesses. Penetration testing can also be used to test an organization's security policy, its adherence to compliance requirements, its employees' security awareness and the organization's ability to identify and respond to security incidents.</p>
+								<p>Typically, the information about security weaknesses that are identified or exploited through pen testing is aggregated and provided to the organization's IT and network system managers, enabling them to make strategic decisions and prioritize remediation efforts.</p>
+								<p>Penetration tests are also sometimes called white hat attacks because in a pen test, the good guys are attempting to break in.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Cyber Security</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Cyber security is part of a wider discipline covering information assurance, IT security and risk management and looks to defend against web-based or electronic attacks targeted at government, organisations and individuals. These attacks are often very difficult to detect.</p>
+								<p>Over the past decade security attacks have become increasingly complex due in part to the emergence of an illegal black market around the personal information that can be obtained from businesses, governments and members of the public and a growing realisation that valuable intellectual property can be stolen from IT systems. Some estimates put the global cost to business as high as $1 trillion. It is this threat that forced the UK Government to commit to an investment of £650m in cyber security in its Strategic Defence and Security Review last autumn.</p>
+								<p>Today, cyber security is a rapidly growing global issue and an ever increasing market. Adversaries range from small scale hackers to extensive communities of interest or activism, organised crime and foreign governments. All have access to very sophisticated technology and are focused on a specific goal. As a result, cyber attacks can be very costly and dangerous – often becoming evident only once the information or data is already in the wrong hands.</p>
 							</article>
 
 						<!-- About -->
