--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Cyber Security</h2>
+								<h2 class="major">Security</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Cyber security is part of a wider discipline covering information assurance, IT security and risk management and looks to defend against web-based or electronic attacks targeted at government, organisations and individuals. These attacks are often very difficult to detect.</p>
 								<p>Over the past decade security attacks have become increasingly complex due in part to the emergence of an illegal black market around the personal information that can be obtained from businesses, governments and members of the public and a growing realisation that valuable intellectual property can be stolen from IT systems. Some estimates put the global cost to business as high as $1 trillion. It is this threat that forced the UK Government to commit to an investment of £650m in cyber security in its Strategic Defence and Security Review last autumn.</p>
