--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="fas fa-code"></span>
+							<span class="fas fa-terminal"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
