--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Pentesting</a></li>
-								<li><a href="#work">Security</a></li>
+								<li><a href="#pentesting">Pentesting</a></li>
+								<li><a href="#security">Security</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -43,8 +43,8 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-							<article id="intro">
+						<!-- pentesting -->
+							<article id="pentesting">
 								<h2 class="major">Pentesting</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Don’t confuse penetration testing with simply vulnerability scanning or security assessments – it’s those things plus more.  Pentesting helps find some of the most complicated attack vectors across systems, finding vulnerabilities that tools and techniques used during development are unable to detect, as they are testing single systems, not yet embedded in the organization’s wider network. Pentesting is also often used after an intrusion to detect the vectors used by the attackers to recreate the attack and prevent it from happening again.</br>
@@ -54,8 +54,8 @@
 								<p>Penetration tests are also sometimes called white hat attacks because in a pen test, the good guys are attempting to break in.</p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
+						<!-- security -->
+							<article id="security">
 								<h2 class="major">Security</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Cyber security is part of a wider discipline covering information assurance, IT security and risk management and looks to defend against web-based or electronic attacks targeted at government, organisations and individuals. These attacks are often very difficult to detect.</p>
