--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form action="https://formspree.io/protego_dev@protonmail.ch" method="post">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
