--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>About</p>
+								<p>Internal and External testing of your environment for potential weekness and points of breach. Indepth ananlysis and consultation giving you the insight into your home or business.</p>
+								<p>Red team, blue team stratigies to keep your infrasturucture safe and secure. Giving you the insight on how your environment could be compromised.</p>
+								<p>These stratigies can be invasive and non invasive testing. Consultations available on request.</p>
 							</article>
 
 						<!-- Contact -->
