--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<li><a href="#security">Security</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#elements">Elements</a></li>
+								<li><a href="#blog">Blog</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -104,8 +104,8 @@
 							</article>
 
 						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
+							<article id="blog">
+								<h2 class="major">Blog</h2>
 
 								<section>
 									<h3 class="major">Text</h3>
