--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>protego.dev</title>
@@ -103,7 +98,7 @@
 								</ul> -->
 							</article>
 
-						<!-- Elements -->
+						<!-- Blog -->
 							<article id="blog">
 								<h2 class="major">Blog</h2>
 
